# polyweave

./: .gitignore  404.html  CHANGELOG.md  EXPERIMENTS.md  LICENSE  NOTICE  README.md  index.html  lib_structure_ideas.md  mkdocs.yml  new_sigmapi_recipe.md  objects.inv  paper2_draft.md  plot_depth_sweep.py  plot_rrr_rank.py  pyproject.toml  qk_diagnostic_driver.py  requirements.txt  run_gpt2_multiseed_v2.py  run_kfold_ceilings.py  run_residual_gain_clean.py  run_sigmapi_diag.py  run_sigmapi_diag3.py  run_tinyllama_scaleaware.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/distill/: index.html
api/evaluation/: index.html
api/hypernets/: index.html
api/interpretability/: index.html
api/layers/: index.html
api/logic/: index.html
api/metrics/: index.html
api/ops/: index.html
api/prototypes/: index.html
api/reasoning/: index.html
api/students/: index.html
api/targets/: index.html
api/training/: index.html
blog/: index.html
blog/differentiable-logic/: index.html
blog/how-linear-is-a-transformer-ffn/: index.html
blog/hypernetworks-on-cifar/: index.html
concepts/: index.html
docs/: concepts.md  getting-started.md  index.md
docs/api/: distill.md  evaluation.md  hypernets.md  interpretability.md  layers.md  logic.md  metrics.md  ops.md  prototypes.md  reasoning.md  students.md  targets.md  training.md
getting-started/: index.html
latex_papers/: how_linear_ffn.tex  references.bib  references_paper2.bib  when_does_pi_fire.tex
plots/: multiseed_qk_new.json  multiseed_results.json  polyweave_cifar_conv1_ensemble_results_seed42.json  random_recovery_results.json
polyweave/: __init__.py  metrics.py  utils.py
research/: paper1_draft.md  paper3_scope.md  plot_corpus_robustness.py  plot_depth_sweep.py  run_corpus_robustness.py  run_depth_sweep.py  run_depth_sweep_gutenberg.py  run_ffn_linear_svd.py  run_gpt2_multiseed.py  run_llama_multiseed.py  run_llama_multiseed_v2.py  run_occlusion_fidelity.py  run_poly2x.py  run_pythia_multiseed_v2.py  run_residual_gain.py  run_rrr_rank.py  run_sigmapi_diag2.py  run_sigmapi_diag4.py  run_sigmapi_diag5.py  run_sigmapi_fix.py  run_tests.py  run_tinyllama_zeroshot.py
search/: search_index.json
tests/: test_distill.py  test_ensemble.py  test_evaluation.py  test_experiments_smoke.py  test_gpt2_mlp_distill.py  test_hypernets.py  test_layer_diagnostics.py  test_layers.py  test_literals.py  test_logic.py  test_metrics.py  test_multiseed.py  test_occlusion.py  test_ops.py  test_poly_linear.py  test_prototypes.py  test_random_recovery.py  test_reasoning.py  test_sigmapi_student.py  test_student_occlusion.py  test_students.py  test_targets.py  test_training.py  test_viz.py
(+117 files in other folders)
