[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyweave"
version = "0.1.0"
description = "Multiplicative (Sigma-Pi) layers and hypernetworks for weight generation."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Stuart Whipp" }]
license = { text = "Apache-2.0" }
keywords = ["hypernetwork", "sigma-pi", "multiplicative", "pytorch", "few-shot"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/Notabot123/polyweave"
Repository = "https://github.com/Notabot123/polyweave"
Documentation = "https://Notabot123.github.io/polyweave/"
Issues = "https://github.com/Notabot123/polyweave/issues"

[project.optional-dependencies]
experiments = ["torchvision>=0.15"]
distill = ["transformers>=4.30", "datasets>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[tool.setuptools.packages.find]
include = ["polyweave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["polyweave"]
omit = ["polyweave/experiments/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
